# vocabs_contrast

./: .gitignore  pyproject.toml
annoy/: annoy_vector_store.py
chroma/: chroma_vector_store.py
dataset/: agrovoc-parser.py  dataset-vector-space.py  eurovoc-parser.py  rdf-parser.py  unesco-parser.py
faiss/: faiss_vector_store.py
milvus/: milvus.py
weaviate/: weaviate_vector_store.py
