[tool.poetry]
name = "vocabs-contrast"
version = "0.1.0"
description = ""
authors = ["Edel Abreu <edelabreuhernandez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-milvus = "^0.1.8"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
