[tool.poetry]
name = "vocabs-contrast"
version = "0.1.0"
description = ""
authors = ["Edel Abreu <edelabreuhernandez@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
langchain-milvus = "^0.1.8"
langchain-huggingface = "^0.1.2"
langchain-weaviate = "^0.0.4"
langchain-chroma = "^0.2.1"
rdflib = "^7.1.3"
pandas = "^2.2.3"
faiss-cpu = "^1.10.0"
annoy = "^1.17.3"
streamlit = "^1.42.2"
seaborn = "^0.13.2"
psutil = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
